Added 21 to 35 Questions of JVM